--- a/index.html
+++ b/index.html
@@ -12,6 +12,32 @@
 </head>
 <body>
     <div id="app">
+        <!--Milestone 1
+        Mostriamo tutti gli annunci in una lista, con una grafica molto elementare.-->
+        <div class="container mt-3">
+            <div v-for="job in jobs"  class=" row firstMilestone justify-content-center">
+                <ul class=" jobs-content col-8">
+                    <li>
+                       <h4>{{job.company}}</h4> 
+                    </li>
+                    <li>
+                        {{job.position}}
+                    </li>
+                    <li>
+                        {{job.description}}
+                    </li>
+                    <li>
+                        {{job.created_at}}
+                    </li>
+                    <li>
+                        {{job.city}}
+                    </li>
+                    <li>
+                        {{job.contract}}
+                    </li> 
+                </ul>
+            </div>
+        </div>
 
     </div>
     <script type="text/javascript" src="js/script.js"></script>
